@@ -1,3 +1,8 @@
+2007-11-10  Christian Franke  <franke@computer.org>
+
+	* normal/menu.c (run_menu): Check for empty menu to avoid crash.
+	(grub_menu_run): Likewise.
+
 2007-11-10  Robert Millan  <rmh@aybabtu.com>
 
 	* include/grub/i386/efi/machine.h: New file.
